Fix the routing for preview edit with article id

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --live-reload=false -o --host=0.0.0.0",
+    "start": "ng serve hermes --live-reload=false -o --host=0.0.0.0",
     "serve:editor": "ng serve hermes-editor --live-reload=false -o --host=0.0.0.0",
-    "build": "ng build --prod",
+    "switch:nhavaxe": "cp projects/hermes-editor/src/environments/firebase.nhavaxe.ts projects/hermes-editor/src/environments/firebase.conf.ts",
+    "switch:baodoisong": "cp projects/hermes-editor/src/environments/firebase.baodoisong.ts projects/hermes-editor/src/environments/firebase.conf.ts",
+    "build:hermes": "ng build hermes --prod",
     "build:editor": "ng build hermes-editor --prod",
-    "build:nhavaxe-publish": "cp projects/hermes-editor/src/environments/firebase.nhavaxe.ts projects/hermes-editor/src/environments/firebase.conf.ts && ng build hermes --prod",
-    "build:nhavaxe-editor": "cp projects/hermes-editor/src/environments/firebase.nhavaxe.ts projects/hermes-editor/src/environments/firebase.conf.ts && ng build hermes-editor --prod",
     "deploy:hermes": "cp firebase.hermes.json firebase.json && firebase deploy -P default",
     "deploy:editor": "cp firebase.editor.json firebase.json && firebase deploy -P editor",
     "deploy:nhavaxe-publish": "cp firebase.hermes.json firebase.json && firebase deploy -P nhavaxe-publish",
