--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,11 @@
 {
   "hosting": {
-    "public": "dist/public/hermes",
+    "public": "dist/public/hermes-editor",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
-        "function": "seo"
+        "destination": "/index.html"
       }
     ]
   }
