--- a/firebase.hermes.json
+++ b/firebase.hermes.json
@@ -5,7 +5,7 @@
     "rewrites": [
       {
         "source": "**",
-        "function": "seo"
+        "destination": "/index.html"
       }
     ]
   }
