--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve:editor": "ng serve hermes-editor --live-reload=false -o --host=0.0.0.0",
     "switch:nhavaxe": "cp projects/hermes-editor/src/environments/firebase.nhavaxe.ts projects/hermes-editor/src/environments/firebase.conf.ts",
     "switch:baodoisong": "cp projects/hermes-editor/src/environments/firebase.baodoisong.ts projects/hermes-editor/src/environments/firebase.conf.ts",
-    "build:hermes": "ng build hermes --prod",
+    "build": "ng build hermes --prod",
     "build:editor": "ng build hermes-editor --prod",
     "deploy:hermes": "cp firebase.hermes.json firebase.json && firebase deploy -P default",
     "deploy:editor": "cp firebase.editor.json firebase.json && firebase deploy -P editor",
@@ -19,11 +19,11 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
     "@angular/animations": "^6.0.4",
     "@angular/cdk": "^6.2.1",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/core": "^6.0.4",
     "@angular/elements": "^6.0.4",
     "@angular/forms": "^6.0.4",
     "@angular/http": "^6.0.4",
@@ -32,6 +32,7 @@
     "@angular/platform-browser-dynamic": "^6.0.4",
     "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.4",
+    "@angular/service-worker": "^6.0.4",
     "angularfire2": "^5.0.0-rc.10",
     "core-js": "^2.5.7",
     "firebase": "^5.0.4",
@@ -39,8 +40,8 @@
     "quill": "^1.3.6",
     "rxjs": "^6.2.0",
     "screenfull": "^3.3.2",
-    "zone.js": "^0.8.26",
-    "@angular/service-worker": "^6.0.4"
+    "smoothscroll-polyfill": "^0.4.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.4",
