--- a/package.json
+++ b/package.json
@@ -19,53 +19,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.4",
-    "@angular/cdk": "^6.2.1",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/elements": "^6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "^6.0.4",
-    "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/animations": "^6.1.1",
+    "@angular/cdk": "^6.4.2",
+    "@angular/common": "^6.1.1",
+    "@angular/compiler": "^6.1.1",
+    "@angular/core": "^6.1.1",
+    "@angular/elements": "^6.1.1",
+    "@angular/forms": "^6.1.1",
+    "@angular/http": "^6.1.1",
+    "@angular/material": "^6.4.2",
+    "@angular/platform-browser": "^6.1.1",
+    "@angular/platform-browser-dynamic": "^6.1.1",
     "@angular/pwa": "^0.6.8",
-    "@angular/router": "^6.0.4",
-    "@angular/service-worker": "^6.0.4",
-    "angularfire2": "^5.0.0-rc.10",
+    "@angular/router": "^6.1.1",
+    "@angular/service-worker": "^6.1.1",
+    "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.5.7",
-    "firebase": "^5.0.4",
-    "ngx-quill": "^3.2.0",
+    "firebase": "^5.3.1",
+    "ngx-quill": "^3.4.0",
     "quill": "^1.3.6",
-    "rxjs": "^6.2.0",
+    "rxjs": "^6.2.2",
     "screenfull": "^3.3.2",
     "smoothscroll-polyfill": "^0.4.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.4",
     "@angular-devkit/build-angular": "^0.6.8",
-    "typescript": "~2.7.2",
     "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "@angular/cli": "^6.0.8",
-    "@angular/language-service": "^6.0.4",
+    "@angular/cli": "^6.1.2",
+    "@angular/compiler-cli": "^6.1.1",
+    "@angular/language-service": "^6.1.1",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.6",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": "^0.32.1",
+    "tslib": "^1.9.3",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
