--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "hermes",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve hermes --live-reload=false --host=0.0.0.0",
     "build": "ng build hermes --prod",
+    "serve:bang-gia": "ng serve bang-gia --live-reload=false --host=0.0.0.0",
+    "build:bang-gia": "ng build bang-gia --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
