--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/public/hermes",
+            "outputPath": "dist/hermes",
             "index": "projects/hermes/src/index.html",
             "main": "projects/hermes/src/main.ts",
             "polyfills": "projects/hermes/src/polyfills.ts",
@@ -127,132 +127,6 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": "projects/hermes-e2e/tsconfig.e2e.json",
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "bang-gia": {
-      "root": "projects/bang-gia/",
-      "sourceRoot": "projects/bang-gia/src",
-      "projectType": "application",
-      "prefix": "bg",
-      "schematics": {
-        "@schematics/angular:component": {
-          "styleext": "scss"
-        }
-      },
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/modules/bang-gia",
-            "index": "projects/bang-gia/src/index.html",
-            "main": "projects/bang-gia/src/main.ts",
-            "polyfills": "projects/bang-gia/src/polyfills.ts",
-            "tsConfig": "projects/bang-gia/tsconfig.app.json",
-            "assets": [
-              "projects/bang-gia/src/favicon.ico",
-              "projects/bang-gia/src/assets"
-            ],
-            "styles": [
-              "projects/bang-gia/src/styles.scss"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "projects/bang-gia/src/environments/environment.ts",
-                  "with": "projects/bang-gia/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true
-            }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "bang-gia:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "bang-gia:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "bang-gia:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/bang-gia/src/test.ts",
-            "polyfills": "projects/bang-gia/src/polyfills.ts",
-            "tsConfig": "projects/bang-gia/tsconfig.spec.json",
-            "karmaConfig": "projects/bang-gia/karma.conf.js",
-            "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
-              "projects/bang-gia/src/styles.scss"
-            ],
-            "scripts": [],
-            "assets": [
-              "projects/bang-gia/src/favicon.ico",
-              "projects/bang-gia/src/assets"
-            ]
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/bang-gia/tsconfig.app.json",
-              "projects/bang-gia/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "bang-gia-e2e": {
-      "root": "projects/bang-gia-e2e/",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "projects/bang-gia-e2e/protractor.conf.js",
-            "devServerTarget": "bang-gia:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "bang-gia:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": "projects/bang-gia-e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
