--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hermes",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "scripts": {
     "ng": "ng",
     "build:editor": "ng build hermes --prod --output-path=dist/editor-nhavaxe",
@@ -12,49 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.3",
-    "@angular/cdk": "^6.4.6",
-    "@angular/common": "^6.1.3",
-    "@angular/compiler": "^6.1.3",
-    "@angular/core": "^6.1.3",
-    "@angular/elements": "^6.1.3",
-    "@angular/forms": "^6.1.3",
-    "@angular/http": "^6.1.3",
-    "@angular/material": "^6.4.6",
-    "@angular/platform-browser": "^6.1.3",
-    "@angular/platform-browser-dynamic": "^6.1.3",
-    "@angular/pwa": "^0.7.4",
-    "@angular/router": "^6.1.3",
-    "@angular/service-worker": "^6.1.3",
-    "angularfire2": "^5.0.0-rc.11",
+    "@angular/animations": "^6.1.9",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.1.9",
+    "@angular/compiler": "^6.1.9",
+    "@angular/core": "^6.1.9",
+    "@angular/elements": "^6.1.9",
+    "@angular/fire": "^5.0.2",
+    "@angular/forms": "^6.1.9",
+    "@angular/http": "^6.1.9",
+    "@angular/material": "^6.4.7",
+    "@angular/platform-browser": "^6.1.9",
+    "@angular/platform-browser-dynamic": "^6.1.9",
+    "@angular/pwa": "^0.7.5",
+    "@angular/router": "^6.1.9",
+    "@angular/service-worker": "^6.1.9",
     "core-js": "^2.5.7",
-    "firebase": "^5.4.0",
-    "ngx-quill": "^3.4.0",
+    "firebase": "^5.5.3",
+    "ngx-quill": "^3.6.0",
     "quill": "^1.3.6",
-    "rxjs": "^6.2.2",
-    "screenfull": "^3.3.2",
+    "rxjs": "^6.3.3",
+    "screenfull": "^3.3.3",
     "smoothscroll-polyfill": "^0.4.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.7.4",
-    "@angular-devkit/build-ng-packagr": "^0.7.4",
-    "@angular/cli": "^6.1.4",
-    "@angular/compiler-cli": "^6.1.3",
-    "@angular/language-service": "^6.1.3",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.5.8",
-    "codelyzer": "^4.4.4",
+    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular-devkit/build-ng-packagr": "^0.7.5",
+    "@angular/cli": "^6.2.4",
+    "@angular/compiler-cli": "^6.1.9",
+    "@angular/language-service": "^6.1.9",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
+    "@types/node": "^10.11.4",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.5",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.3.1",
     "ng-packagr": "^3.0.6",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.1",
     "ts-node": "^7.0.1",
     "tsickle": "^0.32.1",
     "tslib": "^1.9.3",
